Update README with HTTPS polling and REST query documentation
Document the new 2.22 transport options and API additions:
- Transport options overview (SSH, HTTPS polling, REST queries)
- HTTPS polling usage with GerritRestPoller
- Events detected table with limitations
- REST API query usage with GerritRestQueryHandler
- Architecture diagram showing new class hierarchy
- Configuration reference for GerritConnectionConfig2
- Default values for new config options
- Java 21 note for tests

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Signed-off-by: Michael Trimarchi <michael@amarulasolutions.com>